fix(login): styling on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -31,8 +31,19 @@ tbody tr:hover {
 // Import the Google Font
 @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
 
+div.modal-content>section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
+}
+
 input.time {
   max-width: 7rem;
+}
+
+div#player {
+  width: 100vw;
 }
 
 button.play-pause {
